<resources>
    <string name="app_name">Budget Management</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="text_login">Вход</string>
    <string name="text_register">Регистрация</string>
    <string name="text_register_login">Регистрация/Вход</string>
    <string name="email">Почта</string>
    <string name="password">Пароль</string>
    <string name="next">Далее</string>
    <string name="hello_message">Добро пожаловать</string>
    <string name="verification_message">Подвердите адрес электронной почты</string>
    <string name="sign_out">Выход</string>
    <string name="save">Сохранить</string>
    <string name="load">Загрузить</string>
    <string name="new_purchase">Добавить покупку</string>
    <string name="add_new_purchase">Добавить новую покупку</string>
    <string name="name_purchase">Название</string>
    <string name="category">Категория</string>
    <string name="price">Цена</string>
    <string name="add_purchase">Добавить</string>
    <string name="settings">Настройки</string>
    <string name="username">Имя:</string>
    <string name="ok_button">OK</string>
    <string name="set_budget_text">Бюджет на месяц:</string>
    <string name="currency_type">Валюта аккаунта:</string>
    <string name="default_name">новый пользователь</string>
    <string name="profile_settings">Настройки профиля</string>
    <string name="connection_fixed">Подключение восстановлено</string>
    <string name="sort_by">Сортировка по:</string>
    <string name="date">дата</string>
    <string name="list_purchases">Список покупок</string>
    <string name="usd">USD</string>
    <string name="eur">EUR</string>
    <string name="uah">UAH</string>
    <string name="rub">RUB</string>
    <string name="shop">Покупки</string>
    <string name="cafe">Рестораны</string>
    <string name="entertainment">Развлечения</string>
    <string name="bills">Счета</string>
    <string name="other">Другое</string>
    <string name="all_types">Все</string>
    <string name="show_categories">Показать категории:</string>
    <string name="name_a_z">Названию (А-Я)</string>
    <string name="name_z_a">Названию (Я-А)</string>
    <string name="category_a_z">Категории (А-Я)</string>
    <string name="category_z_a">Категории (Я-А)</string>
    <string name="date_0_1">Дате (возростанию)</string>
    <string name="date_1_0">Дате (убыванию)</string>
    <string name="price_0_1">Цене (возростанию)</string>
    <string name="price_1_0">Цене (убыванию)</string>
    <string name="day_sort">Сегодня</string>
    <string name="yesterday_sort">Вчера</string>
    <string name="week_sort">Неделю</string>
    <string name="month_sort">Месяц</string>
    <string name="all_days_sort">Всё время</string>
    <string name="show_time">Показать статистику за:</string>
    <string name="change_budget_alert">Вы уверены, что хотите изменить бюджет на месяц?</string>
    <string name="update_budget_alert">Обновить бюджет в этом месяце?</string>
    <string name="change_currency_alert">Вы уверены, что хотите изменить валюту аккаунта?</string>
    <string name="cancel">Отменить</string>
    <string name="deleted">Удалено</string>
    <string name="confirm_same_purchase">Подтвердить добавление аналогичной покупки</string>
    <string name="wrong_price_format">Неверный формат цены</string>
    <string name="name_size_err">Слишком длинное имя</string>
    <string name="purchase_successful">Покупка добавлена!</string>
    <string name="currency">Валюта</string>
    <string name="percent_status">Процентное соотношение</string>
    <string name="menu">Меню</string>
    <string name="pie_chart_text">Круговой график</string>
    <string name="bar_chart_text">Диаграма значений</string>
    <string name="budget_left">Использовано установленого бюджета:</string>
    <string name="home">Главная</string>
</resources>